[gd_scene load_steps=7 format=3 uid="uid://bkl8n3v2x7qmr"]

[ext_resource type="Script" uid="uid://bokr0x5i0k8f4" path="res://scripts/Enemy.gd" id="1_enemy_script"]
[ext_resource type="Texture2D" uid="uid://xim2a36qq46s" path="res://assets/enemy.svg" id="2_enemy_texture"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enemy"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_left"]
size = Vector2(8, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_right"]
size = Vector2(8, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_top"]
size = Vector2(28, 8)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_enemy_script")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_enemy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_enemy_texture")

[node name="LeftArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(-20, 0)
shape = SubResource("RectangleShape2D_left")

[node name="RightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_right")

[node name="TopArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopArea"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_top")
